--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,111 @@
-body {
-    display: flex;
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
+* {
+	box-sizing: border-box;
+	font-family: "Roboto Mono", monospace;
 }
 
-#board {
-    margin-top: auto;
-    margin-bottom: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    width: 50%;
-    height: 50%;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap");
+
+body {
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+	height: 100vh;
+}
+
+/* #board { */
+/* margin-top: auto;
+	margin-bottom: auto;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr; */
+/* width: 50%;
+	height: 50%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.cells {
+	display: flex;
+	flex-wrap: wrap;
 }
 
 p {
-    border: 1px solid black;
-    text-align: center;
-    font-size: xx-large;
+	width: 300px;
+	height: 150px;
+	border: 1px solid black;
+	text-align: center;
+	font-size: xx-large;
+	margin: 0;
+} */
+
+main {
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	margin: 0;
+	padding: 0;
+}
+
+#board {
+	flex: 1.5;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+#game {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+	width: 100%;
+}
+
+.cells {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.cell {
+	height: 12.5vw;
+	border: 3px solid black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 10vw;
+	padding-bottom: 40px;
+	flex-basis: 30%;
+}
+
+p {
+	margin: 0;
+}
+
+#player1,
+#player2 {
+	width: 25%;
+}
+
+[id="0"],
+[id="3"],
+[id="6"] {
+	border-left: none;
+}
+[id="0"],
+[id="1"],
+[id="2"] {
+	border-top: none;
+}
+
+[id="6"],
+[id="7"],
+[id="8"] {
+	border-bottom: none;
+}
+
+[id="2"],
+[id="5"],
+[id="8"] {
+	border-right: none;
 }
