--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,26 @@ p {
 #player1,
 #player2 {
 	width: 25%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
+	align-items: center;
+}
+
+.score {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+}
+
+.active {
+	scale: 1.25;
+	transition: 0.3s;
+	background-color: rgb(233, 196, 122);
+	border-radius: 5px;
+	padding: 10px;
 }
 
 [id="0"],
