--- a/styles.css
+++ b/styles.css
@@ -12,32 +12,6 @@ body {
 	height: 100vh;
 }
 
-/* #board { */
-/* margin-top: auto;
-	margin-bottom: auto;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr; */
-/* width: 50%;
-	height: 50%;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.cells {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-p {
-	width: 300px;
-	height: 150px;
-	border: 1px solid black;
-	text-align: center;
-	font-size: xx-large;
-	margin: 0;
-} */
-
 main {
 	position: absolute;
 	height: 100vh;
@@ -53,6 +27,42 @@ main {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+#roundWinner {
+	position: fixed;
+	display: none;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.75);
+	z-index: 2;
+	transition: 1s;
+}
+
+#gameWinner {
+	display: flex;
+	width: 300px;
+	height: 150px;
+	position: absolute;
+	align-items: center;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: auto;
+	margin-bottom: auto;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	text-align: center;
+	background-color: var(--lSand);
+	padding: 25px;
+	border-radius: 5px;
+
+	color: white;
 }
 
 #game {
@@ -82,6 +92,12 @@ p {
 	margin: 0;
 }
 
+#p1,
+#p2 {
+	border-radius: 5px;
+	padding: 10px;
+}
+
 #player1,
 #player2 {
 	width: 25%;
@@ -100,8 +116,9 @@ p {
 }
 
 .active {
-	scale: 1.25;
-	transition: 0.3s;
+	scale: 1.2;
+	text-align: center;
+	transition: 0.5s;
 	background-color: rgb(233, 196, 122);
 	border-radius: 5px;
 	padding: 10px;
@@ -132,4 +149,22 @@ p {
 [id="5"],
 [id="8"] {
 	border-right: none;
+}
+
+@media only screen and (max-width: 460px) {
+	main {
+		flex-direction: column;
+	}
+	#player1,
+	#player2 {
+		width: auto;
+	}
+	#board {
+		flex-direction: row;
+		padding: 20px;
+	}
+
+	.cell {
+		height: 30vw;
+	}
 }
