--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 	padding: 0;
 	width: 100vw;
 	height: 100vh;
+	background-color: antiquewhite;
 }
 
 main {
@@ -62,7 +63,7 @@ main {
 	padding: 25px;
 	border-radius: 5px;
 
-	color: white;
+	color: rgb(243, 235, 17);
 }
 
 #game {
@@ -86,6 +87,13 @@ main {
 	font-size: 10vw;
 	padding-bottom: 40px;
 	flex-basis: 30%;
+}
+
+.cell:hover {
+	cursor: pointer;
+	scale: 1.01;
+	box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.21);
+	background-color: aliceblue;
 }
 
 p {
@@ -151,7 +159,7 @@ p {
 	border-right: none;
 }
 
-@media only screen and (max-width: 460px) {
+@media only screen and (max-width: 765px) {
 	main {
 		flex-direction: column;
 	}
@@ -166,5 +174,7 @@ p {
 
 	.cell {
 		height: 30vw;
+		font-size: 20vw;
+		padding-bottom: 0;
 	}
 }
